# qna_banco_occidente

./: .gitignore  00_reset.py  01_crawling.py  02_scraping_selenium.py  03_cleaner.py  04_markdown_builder.py  05_corpus_master.py  Makefile  README.md  app.py  corpus_master.md  env.example  llm_chains.py  main.py  pyproject.toml  requirements.txt
01_codigos/: 00_reset.py  01_crawling.py  02_scraping_selenium.py  03_cleaner.py  04_markdown_builder.py  05_corpus_master.py  06_youtube_scraper.py  07_chunking.py  agent_router.py  app.py  config.py  config.toml  llm_chains.py  tools.py
contexto/: contexto.md
data/: corpus_master.md  pdf_urls.txt  social_links.txt  urls.txt
data/01_urls/: pdf_urls.txt  social_links.txt  urls.txt
data/02_scraping/: https___portalpublico_bancodeoccidente_com_co_tarjetas_credito_promociones.txt  https___webavc_bancodeoccidente_com_co_wps_portal_banco_de_occidente_bancodeoccidente_footer_otros_defensor_del_consumidor_financiero.txt  https___webavc_bancodeoccidente_com_co_wps_portal_banco_de_occidente_bancodeoccidente_footer_otros_educacion_financiera.txt  https___www_bancodeoccidente_com_co.txt  https___www_bancodeoccidente_com_co_BuscadordePuntosOccidente.txt  https___www_bancodeoccidente_com_co_Inversi_n__https__www_bancodeoccidente_com_co_libre_inversion_autogestion_flujo_corto__utm_source_web_ut.txt  https___www_bancodeoccidente_com_co_apple_pay.txt  https___www_bancodeoccidente_com_co_asistencias_assisprex.txt  https___www_bancodeoccidente_com_co_ayuda.txt  https___www_bancodeoccidente_com_co_ayuda_canales_digitales.txt  (+381 more)
(+2487 files in other folders)
