[project]
name = "qna-banco-occidente"
version = "2.0.0"
description = "Sistema Q&A + Agente Conversacional · Banco de Occidente — Maestría IA y CD · UAO"
requires-python = ">=3.10"
authors = [
    { name = "Equipo UAO - Maestría IA y CD" }
]

dependencies = [
    # Web Scraping
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
    # Extracción de PDFs
    "pypdf>=5.1.0",
    # YouTube
    "google-api-python-client>=2.120.0",
    "youtube-transcript-api>=0.6.2",
    # LLM Framework + Gemini
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-google-genai>=2.0.8",
    "langchain-community>=0.3.14",
    "langchain-text-splitters>=0.3.0",
    # Embeddings locales (sin cuotas de API)
    "sentence-transformers>=2.7.0",
    # Vector Store
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.4",
    # Interfaz web
    "streamlit>=1.41.1",
    # Utilitarios
    "python-dotenv>=1.0.1",
    "langchain-huggingface>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"
